[gd_scene load_steps=7 format=2]

[ext_resource path="res://PlayerStats/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://PlayerStats/PlayerHealth.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerStats/PlayerStamina.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerStats/PlayerMoney.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlayerStats/PlayerStatusEffects.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerStats/PlayerInventory.gd" type="Script" id=6]

[node name="PlayerStats" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerHealth" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.376471 )

[node name="PlayerStamina" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 40 )

[node name="PlayerMoney" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 0, 64 )

[node name="PlayerStatusEffects" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 0, 100 )

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PlayerIFrame" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="status_effects_changed" from="PlayerStatusEffects" to="." method="_on_PlayerStatusEffects_status_effects_changed"]
